move from jaxrs/jersey/apache for client code to direct apache http calls
Signed-off-by: Henry Avetisyan <hga@verizonmedia.com>